# ai-gateway

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .markdownlint-cli2.yaml  .releaserc.json  .tool-versions  AGENTS.md  CONTRIBUTING.md  Dangerfile  Dockerfile  Gemfile  Makefile  README.md  commitlint.config.js  conftest.py  example.env  lefthook.yml  package-lock.json  package.json  pyproject.toml  renovate.json  setup.cfg
.github/workflows/: mirror-gitlab.yml
.gitlab/: CODEOWNERS
.gitlab/ci/: build.gitlab-ci.yml  dependency-review.gitlab-ci.yml  dws-dependencies.yml  dws-loadtest.gitlab-ci.yml  ingest.gitlab-ci.yml  lint.gitlab-ci.yml  performance.gitlab-ci.yml  release.gitlab-ci.yml  stable-tagging.gitlab-ci.yml  test.gitlab-ci.yml
.gitlab/duo/: agent-config.yml  mr-review-instructions.yaml
.gitlab/issue_templates/: Default.md
.gitlab/merge_request_templates/: Default.md  Remote Flows.md
.runway/: default-values.yaml  env-production.yml  env-staging.yml  runway-staging.yml  runway.yml
.runway/ai-gateway-custom/: env-production.yml  env-staging.yml  runway.yml
.runway/ai-gateway-eks/: default-values.yaml  eks-service-production.yaml  eks-service-staging.yaml  eks-service.yaml
.runway/ai-gateway-gke/: default-values.yaml  gke-service-production.yaml  gke-service-staging.yaml  gke-service.yaml
.runway/duo-agent-mirror/: env-production.yml  env-staging.yml  runway-production.yml  runway-staging.yml
.runway/duo-workflow-svc/: env-production.yml  env-staging.yml  runway-production.yml  runway-staging.yml
.runway/duo-workflow-svc-eks/: default-values.yaml  eks-service-production.yaml  eks-service-staging.yaml
.runway/dws-loadtest/: env-production.yml  env-staging.yml  runway.yml
agent_tests/: conftest.py  helpers.py  llm_validator.py
agent_tests/analytics_agent/: conftest.py  helpers.py  test_advanced_features.py  test_clarification.py  test_edge_cases.py  test_embedded_view.py  test_glql_syntax.py  test_orbit_integ.py  test_pagination.py  test_post_to_gitlab.py  test_response_format.py  test_scope_handling.py  test_smoke.py  test_time_expressions.py  test_type_code_suggestions.py  test_type_contributions.py  test_type_jobs.py  test_type_merge_requests.py  test_type_pipeline_analytics.py  test_type_pipelines.py  test_type_projects.py  test_type_work_items.py  test_unsupported_features.py  test_work_items.py
ai_gateway/: README.md  __init__.py  app.py  async_dependency_resolver.py  config.py  container.py  main.py  model_metadata.py  prometheus.py  structured_logging.py  tokenizer.py
ai_gateway/api/: context_utils.py  error_utils.py  feature_category.py  middleware.py  middleware_utils.py  monitoring.py  server.py  server_utils.py  snowplow_context.py
ai_gateway/auth/: gcp.py  glgo.py
ai_gateway/chat/: base.py  container.py  executor.py  toolset.py
ai_gateway/code_suggestions/: __init__.py  base.py  completions.py  container.py  experimental.py  generations.py  handler.py  language_server.py
ai_gateway/feature_flags/: context.py
ai_gateway/instrumentators/: base.py  benchmark.py  model_requests.py  usage_quota.py
ai_gateway/internal_events/: client.py  context.py
ai_gateway/model_selection/: __init__.py  model_selection_config.py  models.py  models.yml  types.py  unit_primitives.yml
ai_gateway/models/: __init__.py  agent_model.py  agentic_mock.py  amazon_q.py  anthropic.py  base.py  base_chat.py  base_text.py  container.py  fireworks_retry.py  litellm.py  mock.py  vertex_text.py
ai_gateway/prompts/: __init__.py  base.py  bind_tools_cache.py  caching.py  completion.py  container.py  embedding.py  in_memory_registry.py  registry.py  typing.py
ai_gateway/response_schemas/: __init__.py  base.py  config.py  container.py  converter.py  inline_registry.py  registry.py
ai_gateway/scripts/: index_docs_as_sqlite.py  tps_test.py  troubleshoot_selfhosted_installation.py
ai_gateway/searches/: search.py  sqlite_search.py  typing.py
ai_gateway/tracking/: errors.py  snowplow.py
ai_gateway/x_ray/: container.py
clients/gopb/: README.md  go.mod
clients/node/: README.md  package-lock.json  package.json
clients/ruby/: .rubocop.yml  README.md  gitlab-duo-workflow-service-client.gemspec
contract/: buf.yaml  contract.proto  contract_pb2.py  contract_pb2.pyi  contract_pb2_grpc.py
docker/fips/: Dockerfile
docs/: adding_new_tool.md  aigw_prompt_registry.md  api.md  application_settings.md  auth.md  billing_events.md  duo_chat.md  duo_workflow_service.md  duo_workflow_service_graphs.md  evaluation.md  flows_overview.md  incremental_checkpoints.md  inference_limits.md  internal_events.md  layers_duo_workflow_service.excalidraw  litellm_model_metadata.md  maintainership.md  model_selection.md  module_boundaries.md  performance_testing.md  release.md  tests.md  vscode.md
duo_workflow_service/: README.md  __init__.py  block_pickle.py  bootstrap.py  client.py  client_capabilities.py  flow_request.py  llm_factory.py  monitoring.py  profiling.py  server.py  server_capabilities.py  server_helpers.py  structured_logging.py
eval/: generate_dataset.py  main.py
integration_tests/: test_code_suggestions.py
lib/: __init__.py  language_server.py  result.py  self_hosted_dap_billing_context.py  version.py
lints/: direct_environment_variable_reference.py  file_naming_for_tests.py  no_exception_swallowing_in_tools.py  optional_field_default.py  unsafe_dependency_resolution.py
scripts/: benchmark_bind_tools_cache.py  benchmark_token_counters_production.py  benchmark_token_counting_strategies.py  benchmark_tokenizers_counters.py  bootstrap.py  build_token_counters_benchmark_dataset.py  collect_prompt_too_long_errors_from_langsmith.py  filter_mypy_excludes.py  generate_dws_change_patterns.py  generate_graph_docs.py  prompt_directory_json_builder.py  run.sh  submit_cef_eval.sh  tag_stable_patch.py  update_prompt_version.sh  validate_graphql.py  verify_pricing_multipliers.py
tests/: conftest.py  example_websocket_client.py  test_app.py  test_config.py  test_model_metadata.py  test_structured_log.py  test_structured_logging.py
(+2091 files in other folders)
