[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ai_gateway"
version = "0.1.0"
dynamic = ["dependencies"]
requires-python = ">=3.12.0,<3.13.0"
description = "A service that gives access to GitLab AI features"
authors = [{ name = "GitLab Engineering", email = "engineering@gitlab.com" }]
readme = "README.md"

[project.scripts]
ai_gateway = "ai_gateway.main:run_app"
ai-gateway = "ai_gateway.main:run_app"
validate-model-selection-config = "ai_gateway.model_selection:validate_model_selection_config"
index_docs = "ai_gateway.scripts.index_docs_as_sqlite:build_indexed_docs"
troubleshoot = "ai_gateway.scripts.troubleshoot_selfhosted_installation:troubleshoot"
compute-tps = "ai_gateway.scripts.tps_test:compute_tps"
duo-workflow-service = "duo_workflow_service.bootstrap:run_bootstrap"
apply-security = "duo_workflow_service.security.prompt_security:run_from_args"
fetch-foundational-agents = "duo_workflow_service.scripts.fetch_foundational_agents:fetch_agents"
verify-pricing-multipliers = "scripts.verify_pricing_multipliers:main"

[tool.poetry.dependencies]
fastapi = "^0.124.4"
dependency-injector = "^4.41.0"
uvicorn = {version = "^0.33.0", extras = ["standard"]}
requests = "^2.32.3"
numpy = "^2.2.3"
python-dotenv = "^1.0.1"
fastapi-health = "^0.4.0"
google-cloud-aiplatform = "^1.36.4"
structlog = "^25.0.0"
asgi-correlation-id = "^4.1.0"
prometheus-fastapi-instrumentator = "^7.0.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
starlette-context = "^0.5.0"
google-cloud-profiler = "^4.1.0"
py-grpc-prometheus = "^0.8.0"
tiktoken = "^0.12.0"
tree-sitter = "^0.21.0"
transformers = "^4.37.2"
snowplow-tracker = "^1.0.3"
anthropic = "^0.108.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.1.0"
starlette = "^0.47.2"
httpx = {version = "^0.28.0", extras = ["socks"]}
prometheus-client = "^0.25.0"
tree-sitter-languages = "^1.10.2"
jinja2 = "^3.1.3"
pyyaml = "^6.0.2"
google-cloud-discoveryengine = "^0.19.0"
litellm = {version = ">=1.84.0,<1.85.0", extras = ["proxy"]}
langgraph = "^1.0.2"
langchain-anthropic = "^1.4.3"
langchain-community = "^0.4.1"
boto3 = "^1.35.37"
python-gitlab = "^7.0.0"
langchain-google-vertexai = "^3.2.0"
gitlab-cloud-connector = {version = "^3.19.0", source = "gitlab_cloud_connector"}
sse-starlette = "^2.1.3"
q_developer_boto3 = { path = "./vendor/q_developer_boto3-1.12.0-py3-none-any.whl" }
poetry-core = "^2.0.1"
google-auth = "^2.38.0"
grpcio = "^1.78.0,!=1.78.1"
grpcio-health-checking = "^1.78.0,!=1.78.1"
grpcio-reflection = "^1.78.0,!=1.78.1"
grpcio-tools = "^1.78.0,!=1.78.1"
sentry-sdk = "^2.17.0"
websockets = "^15.0.1"
langgraph-checkpoint = "4.1.1"
gitmatch = "^0.3.0"
langchain-openai = "^1.1.6"
bleach = "^6.2.0"
setuptools = "^82.0.0"
h11 = "^0.16.0"
urllib3 = "^2.5.0"
cryptography = "^46.0.7"
aiocache = "^0.12.3"
lxml = "^6.0.2"
graphql-core = "^3.2.0"
hiddenlayer-sdk = "^3.2.0"
langchain = "^1.2.7"
langchain-google-genai = "^4.2.0"
pyroscope-io = ">=0.8,<0.9"
detect-secrets = "^1.5.0"
aiohttp = "^3.13.5"
botocore = "^1.43.10"
jsonschema = "^4.23.0"
langchain-core = "^1.4.0"
langsmith = "^0.6.0"
openai = "^2.37.0"
ormsgpack = "^1.12.1"
packaging = "^24.1"
pydantic-core = "^2.46.4"
tenacity = "^8.5.0"

[[tool.poetry.source]]
name = "gitlab_cloud_connector"
url = "https://gitlab.com/api/v4/projects/58733651/packages/pypi/simple"
priority = "supplemental"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.0.0"
pylint = "^4.0.5"
astroid = "^4.0.4"
pytest-watcher = "^0.6.0"
pytest-randomly = "^4.0.0"
pytest-xdist = "^3.6.1"
pytest-rerunfailures = "^16.1"
pyfakefs = "^6.0.0"
memray = "^1.19.1"
joblib = "^1.5.2"
diff-cover = "^10.2.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.15.14"
pylint = "^4.0.5"
astroid = "^4.0.4"
mypy = "^2.0.0"
types-bleach = "^6.2.0.20250809"
types-cachetools = "^5.4.0.20240717"
types-pyyaml = "^6.0.12.20240311"
types-protobuf = "^4.25.0.20240417"
types-requests = "^2.31.0.20240406"
codespell = "^2.4.1"
docformatter = "^1.7.7"
editorconfig-checker = "^3.2.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
yappi = "^1.6.10"
snakeviz = "^2.2.2"

[tool.codespell]
skip = """
*.db,\
*.excalidraw,\
*.js.map,\
*.log,\
*.png,\
*.pyc,\
*_pb2.py,\
*_pb2.pyi,\
*_pb2_grpc.py,\
./bin,\
./htmlcov,\
./tmp,\
./vendor,\
Gemfile.lock,\
node_modules,\
package-lock.json,\
poetry.lock
"""
ignore-words-list = "astroid"
ignore-multiline-regex = "codespell:ignore-begin.*\n.*codespell:ignore-end"

[tool.pytest.ini_options]
addopts = "--disable-warnings --import-mode=importlib"
testpaths = ["tests"]
filterwarnings = ["error::UserWarning"]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = [
  "ai_gateway",
  "duo_workflow_service",
  "lib",
  "lints",
]
omit = [
  "tests/*",
  "*.jinja",
]

[tool.ruff]
line-length = 88
target-version = "py312"
# Pin ruff: lint rules and formatter output can change between releases, so
# contributors and CI must resolve the same ruff to get identical results.
# Keep in sync with the `ruff` pin in [tool.poetry.group.lint.dependencies].
required-version = ">=0.15.14"
# Skip generated protobuf stubs and vendored code (any `vendor/` dir, matching
# pylint's `--ignore=vendor`). `force-exclude` makes these apply even when files
# are passed explicitly (e.g. lefthook staged paths).
force-exclude = true
extend-exclude = ["*_pb2.py", "*_pb2.pyi", "*_pb2_grpc.py", "**/vendor"]

[tool.ruff.lint]
# Explicit rule set (not `extend-select`) so the active rules are fully visible
# and do not drift when ruff changes its defaults. Rule groups enabled during
# the ruff migration (work item #2237):
#   I  imports        E,W,F  pycodestyle + pyflakes (replaces flake8)
#   C4 comprehensions RUF    ruff-specific          PL  pylint subset
select = [
  "I",
  "E",
  "W",
  "F",
  "C4",
  "RUF",
  "PL",
]
ignore = [
  "E501",    # line length is owned by the formatter, not enforced as a lint error
  "E203",    # whitespace before ':', conflicts with ruff/black formatting
  "PLR2004", # magic-value-comparison: not enforced today; deferred style debt
  "PLC0415", # import-outside-top-level: lazy imports are intentional (DI / circular-import avoidance)
  "PLW0603", # global-statement: intentional module-level singletons / config flags
  "PLW2901", # redefined-loop-name: intentional normalize-the-item-in-loop idiom
  "PLW1641", # eq-without-hash: value classes compared by value, never used as keys
  "PLW0108", # unnecessary-lambda: test mock side_effect wrappers read more clearly as lambdas
  "RUF012",  # mutable-class-default: noisy with Pydantic/dataclass patterns; not enforced today
  "RUF001",  # ambiguous-unicode (string): intentional typography + CJK test fixtures
  "RUF002",  # ambiguous-unicode (docstring): same as RUF001
  "RUF003",  # ambiguous-unicode (comment): same as RUF001
  "RUF005",  # collection-literal-concatenation: style only; autofix is unsafe (operand may be non-list)
  "RUF006",  # asyncio-dangling-task: fire-and-forget tasks are intentional; task-ref handling is a separate change
  "RUF043",  # pytest-raises-ambiguous-pattern: existing test match= patterns pass; not worth churning
  # RUF100 (unused-noqa) is deferred: it is accurate only once every rule group
  # (E/W/F, C4, PL) is active, otherwise it strips noqa for inactive rules.
  "RUF100",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"] # re-export pattern: unused and `import *` re-exports are intentional
"tests/**" = ["PLR2004"]         # magic values in tests are fine (also globally ignored above)

[tool.ruff.lint.pylint]
# Mirror the historical pylint limits so enabling the PL group does not
# introduce hundreds of false complexity violations.
max-args = 17
max-positional-args = 17
max-locals = 30
max-statements = 65
max-branches = 20

[tool.ruff.lint.isort]
# `_pickle` is the C accelerator for `pickle`. ruff treats it as standard
# library, but pylint classifies it as third-party; pin it here so both tools
# agree on import ordering (avoids pylint wrong-import-order).
known-third-party = ["_pickle"]

[tool.pylint.main]
extension-pkg-allow-list = ["dependency_injector", "lxml"]
# Exclude protobuf packages because they can't be parsed properly by pylint, leading to `no-name-in-module` errors.
# See https://github.com/protocolbuffers/protobuf/issues/10372
ignored-modules=["contract.contract_pb2", "google.protobuf.struct_pb2", "google.rpc.error_details_pb2"]
jobs = 0
load-plugins = [
  "lints.unsafe_dependency_resolution",
  "lints.direct_environment_variable_reference",
  "lints.file_naming_for_tests",
  "lints.no_exception_swallowing_in_tools",
]

[tool.pylint.format]
max-args = 17
max-attributes = 10
max-line-length = 120
max-locals = 30
max-positional-arguments = 17
max-statements = 65

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-function-docstring",
  "missing-class-docstring",
  "too-few-public-methods",
  "no-member",
  "fixme",
  "protected-access",
  "no-name-in-module",
  "arguments-differ",
  "unspecified-encoding",
  "redefined-builtin",
  "arguments-renamed",
  "raise-missing-from",
  "abstract-method",
  "broad-exception-caught",
  "duplicate-code",
]
enable = [
  "unsafe-dependency-resolution",
  "direct-environment-variable-reference",
  "useless-suppression",
]

[tool.pylint.reports]
score = "no"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
disable_error_code = "method-assign"

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = false
disable_error_code = "annotation-unchecked"

[tool.docformatter]
wrap-summaries = 120
wrap-descriptions = 120
